# diamond-blm-expert-gui

./: .gitignore  README.md  config_file.json  setup.py
diamond_blm_expert_gui/: __init__.py  create_pyccda_json_file.py  dem.py  diamond_blm_expert_gui-1.1.1-py3-none-any.whl  diamond_blm_expert_gui-1.3.0-py3-none-any.whl  fullscreen_rawbuf0 (copy 1).py  fullscreen_rawbuf0.py  fullscreen_rawbuf0.ui  fullscreen_rawbuf0_fft.py  fullscreen_rawbuf0_fft.ui  fullscreen_rawbuf1.py  fullscreen_rawbuf1.ui  fullscreen_rawbuf1_fft.py  fullscreen_rawbuf1_fft.ui  general_utils.py  interpol.py  launcher.py  main_auto.py  main_auto.ui  pr.py  premain.py  premain.ui  preview_one_device.py  preview_summary.py  preview_summary.ui  pyproject.toml  settings_dialog_auto.py
diamond_blm_expert_gui/before_subs/: premain.ui  preview_one_device.ui  preview_summary (copy 1).py  preview_summary.py  preview_summary.ui
diamond_blm_expert_gui/deprecated/: big_data.py  connection_custom.py  fullscreen_rawbuf0.py  fullscreen_rawbuf0.ui  fullscreen_rawbuf0_fft.py  fullscreen_rawbuf1.py  fullscreen_rawbuf1_fft.py  fullscreen_rawbuf1_fft.ui  gettoy.py  hd5.py  info_summary.py  info_summary.ui  main.py  main.ui  main_1.py  main_2.py  main_auto.py  premain.py  premain_1.ui  premain_2.ui  preview_one_device.py  preview_one_device.ui  preview_one_device_before_pyuic5.py  preview_one_device_before_pyuic5.ui  segmentation_test_1.py  segmentation_test_1.ui  segmentation_test_2.py  segmentation_test_2.ui  settings_dialog.py  settings_dialog.ui  settings_dialog_auto.ui  test_cstaticplot.py  test_cstaticplot.ui  (+2 more)
(+7 files in other folders)
