[project]
name = "diamond-blm-expert-gui"
version = "1.0.6"
dependencies = [ "comrad==0.1.3", "h5py==3.5.0", "pyqtgraph==0.10.0.post0",]
description = "Expert GUI for the DIAMOND BLM devices."
[[project.maintainers]]
name = "martinja"
email = "javier.martinez.samblas@cern.ch"

[build-system]
requires = [ "comrad==0.1.3",]
build-backend = "comrad_package.builder"

[tool.comrad.package]
entrypoint = "premain.py"
arguments = "--hide-log-console -s SPS.USER.ALL"
