[project]
name = "diamond-blm-expert-gui"
version = "1.4.2"
dependencies = [ "comrad==0.1.4", "pyqtgraph==0.12.3",]
description = "Expert GUI for the DIAMOND BLM devices."
[[project.maintainers]]
name = "martinja"
email = "javier.martinez.samblas@cern.ch"

[build-system]
requires = [ "comrad==0.1.4",]
build-backend = "comrad_package.builder"

[tool.comrad.package]
entrypoint = "premain.py"
arguments = "--hide-log-console -s SPS.USER.ALL"
